feat: add generation telegram-link; bugfux
